--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/Theme.ExcoApp">
         <activity android:name=".Inici"/>
         <activity android:name=".TriarTema"/>
+        <activity android:name=".Ajustes"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
