--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 buildscript {
     ext.kotlin_version = "1.4.32"
     repositories {
-        google()
         jcenter()
+        google()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
@@ -19,6 +19,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven() {
+            url "https://maven.google.com"
+        }
     }
 }
 
